Add variables color-danger and color-font

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,4 +3,6 @@
 $font-primary: 'Raleway', sans-serif;
 $font-secondary: 'Source Sans Pro', sans-serif;
 
-$color-primary: #1d2124;
+$color-font: #2d302d;
+$color-primary: #10b480;
+$color-danger: #f25c54;
