set background button with color variables

--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -31,7 +31,7 @@ form {
     height: 32px;
     margin-top: 16px;
     border-radius: 2px;
-    background: #1d2124;
+    background: $color-font;
     color: #fff;
     text-transform: uppercase;
     font-weight: 600;
