--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -2,27 +2,42 @@ form {
   display: flex;
   flex-direction: column;
 
-  label {
-    margin-bottom: 4px;
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-
-    &:not(:first-of-type) {
-      margin-top: 12px;
-    }
-  }
-
-  input {
+  .form-field {
+    display: flex;
+    flex-direction: column;
     max-width: 300px;
-    height: 32px;
-    padding: 0 8px;
-    background-color: #f5f5f5;
-    border: #eee solid 1px;
-    border-radius: 2px;
+    margin-bottom: 12px;
+    font-size: 14px;
 
-    &:focus {
-      background-color: #fafafa;
+    label {
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: 2px;
+    }
+
+    input {
+      height: 32px;
+      padding: 0 8px;
+      background-color: #f5f5f5;
+      border: #eee solid 1px;
+      border-radius: 2px;
+      transition: border-color 0.4s ease-in-out;
+
+      &:focus {
+        background-color: #fafafa;
+      }
+
+      &.valid {
+        border-color: #{$color-primary}88;
+      }
+
+      &.invalid {
+        border-color: #{$color-danger}88;
+      }
+    }
+
+    span.form-field-error {
+      color: $color-danger;
     }
   }
 
