add warning color

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $font-secondary: 'Source Sans Pro', sans-serif;
 $color-font: #2d302d;
 $color-primary: #10b480;
 $color-danger: #f25c54;
+$color-warning: #f8b90b;
 
 $transition-background-color: background-color 0.5s ease-in-out,
   color 0.6s ease-in-out;
